--- a/.github/workflows/Securin-aspm.yaml
+++ b/.github/workflows/Securin-aspm.yaml
@@ -13,14 +13,14 @@ jobs:
     env:
       APP_ID: 0ec3c51dd1129655dcbc709dd7ee37b30da2c39024e67e61a54ce38fe42db78d
       BRANCH_NAME: main
-      SCAN_ID: 2881fc61e10308bc26088a7f95db96a9f905540baa971a06529c4c5b398447c4
-      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://b85e-103-213-1-241.ngrok.io/resultapi\"\
-        ,\"SL_RESULTPARSER_API_HOST\":\"https://a3d8-103-213-1-241.ngrok.io/resultparserapi\"\
+      SCAN_ID: ead490b3e09e5d170838d1857cea629c7c8d8f4d40076f194a2b93b0f2f78348
+      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://af29-103-213-1-241.ngrok.io\"\
+        ,\"SL_RESULTPARSER_API_HOST\":\"https://ec30-103-213-1-241.ngrok.io/resultparserapi\"\
         }')}}"
     steps:
     - name: Retrieve Token Info
       id: auth_token
-      run: "respJson=$(curl --location --request GET 'https://b85e-103-213-1-241.ngrok.io/resultapi/aws/ecr/token'\
+      run: "respJson=$(curl --location --request GET 'https://af29-103-213-1-241.ngrok.io/aws/ecr/token'\
         \  --header 'Authorization: Bearer ${{secrets.CLI_ACCESS_TOKEN}}'  --data-raw\
         \ ' ' ) \necho \"authTokenJson=$respJson\" >> $GITHUB_OUTPUT"
     - uses: actions/checkout@v3
